# exact

./: Cargo.toml
src/: exact.rs  fraction.rs  integer.rs  lib.rs  matrix4.rs  natural.rs  parser.pest  parser.rs  point3d.rs  sign.rs  signed.rs  sum.rs  vec.rs  vec3.rs  vec4.rs
src/test/: exact.rs  matrix4.rs  mod.rs
